--- a/src/Styles/ContainerStyles.css
+++ b/src/Styles/ContainerStyles.css
@@ -1,18 +1,9 @@
 .container-styles {
-  height: 100vh;
-  width: auto;
-}
-
-.image-container {
   display: flex;
-  justify-content: center;
-  height: 19em;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 100vh;
   width: 100%;
-}
-
-.image-styling {
-  width: 100%;
-  height: auto;
 }
 
 .map-container {
