--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,3 +109,9 @@ a {
 body {
   margin: 0%;
 }
+div {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  /* background-color: black; */
+}
