--- a/src/Styles/ImageComponentStyles.scss
+++ b/src/Styles/ImageComponentStyles.scss
@@ -38,3 +38,10 @@
   color: white;
   font-size: 18px;
 }
+
+.input-placeholder {
+  position: absolute;
+  margin-top: 6em;
+  width: 100%;
+  justify-content: center;
+}
