--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -3,8 +3,58 @@
   src: url("../assets/fonts/Rubik-VariableFont_wght.ttf");
 }
 @media (min-width: 375px) {
-  .input-container {
-    border: red solid 1px;
+  .form-container {
+    display: flex;
+    max-width: 80%;
+    width: 80%;
+    height: 3em;
+    border-radius: 8px;
+  }
+}
+@media (min-width: 960px) {
+  .form-container {
+    display: flex;
+    align-items: center;
+    max-width: 25em;
     width: 100%;
+    height: 3em;
+    border-radius: 8px;
+  }
+}
+
+.input-container {
+  display: flex;
+  border-radius: 8px;
+}
+
+@media (min-width: 375px) {
+  .form-wrapper {
+    display: flex;
+    width: 100%;
+  }
+  .form-wrapper input {
+    height: 3.5em;
+    outline: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border: none;
+    width: 100%;
+    padding-left: 1em;
+    line-height: 18px;
+    font-size: 15px;
+    font-family: "Rubik";
+  }
+  .form-wrapper button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4.088em;
+    border: none;
+    background-color: black;
+    color: white;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    cursor: pointer;
+    width: 4em;
   }
 }/*# sourceMappingURL=InputStyles.css.map */
