--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -1,8 +1,86 @@
 @import "../Variables/Variables.scss";
 @import "../Breakpoints/Breakpoints.scss";
-.input-container {
+.form-container {
   @include mobile {
-    border: red solid 1px;
+    display: flex;
+    max-width: 80%;
+    width: 80%;
+    height: 3em;
+    border-radius: 8px;
+  }
+
+  @include desktop {
+    display: flex;
+    align-items: center;
+
+    max-width: 25em;
     width: 100%;
+    height: 3em;
+    border-radius: 8px;
   }
 }
+
+.input-container {
+  display: flex;
+  border-radius: 8px;
+}
+
+@include mobile {
+  .form-wrapper {
+    display: flex;
+    width: 100%;
+    input {
+      height: 3.5em;
+      outline: none;
+      border-top-left-radius: 8px;
+      border-bottom-left-radius: 8px;
+      border: none;
+      width: 100%;
+      padding-left: 1em;
+      line-height: 18px;
+      font-size: 15px;
+      font-family: $mediumFont;
+    }
+
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 4.088em;
+      border: none;
+      background-color: black;
+      color: white;
+      border-top-right-radius: 8px;
+      border-bottom-right-radius: 8px;
+      cursor: pointer;
+      width: 4em;
+    }
+  }
+}
+
+// input {
+//   height: 3.48em;
+//   outline: none;
+//   border-top-left-radius: 8px;
+//   border-bottom-left-radius: 8px;
+//   border: none;
+//   width: 100%;
+//   padding-left: 1em;
+//   line-height: 18px;
+//   font-size: 15px;
+//   font-family: $mediumFont;
+// }
+
+// button {
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+//   height: 4.088em;
+//   border: none;
+//   background-color: black;
+//   color: white;
+//   border-top-right-radius: 8px;
+//   border-bottom-right-radius: 8px;
+//   cursor: pointer;
+//   width: 4em;
+// }
