responsive button layout

--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -30,6 +30,7 @@
 @media (min-width: 375px) {
   .form-wrapper {
     display: flex;
+    min-width: 100%;
     width: 100%;
   }
   .form-wrapper input {
