--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -49,6 +49,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height: 4.09em;
     height: 4.09em;
     border: none;
     background-color: black;
