--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -46,6 +46,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      min-height: 4.09em;
       height: 4.09em;
       border: none;
       background-color: black;
