--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -2,7 +2,7 @@
   font-family: "Rubik";
   src: url("../assets/fonts/Rubik-VariableFont_wght.ttf");
 }
-@media (min-width: 373px) {
+@media (min-width: 375px) {
   .form-container {
     display: flex;
     max-width: 80%;
@@ -27,7 +27,7 @@
   border-radius: 8px;
 }
 
-@media (min-width: 373px) {
+@media (min-width: 375px) {
   .form-wrapper {
     display: flex;
     min-width: 100%;
@@ -50,7 +50,37 @@
     align-items: center;
     justify-content: center;
     min-height: 4.09em;
-    height: 4.09em;
+    border: none;
+    background-color: black;
+    color: white;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+    cursor: pointer;
+    width: 4em;
+  }
+}
+@media (min-width: 960px) {
+  .form-wrapper {
+    display: flex;
+    width: 100%;
+  }
+  .form-wrapper input {
+    height: 3.5em;
+    outline: none;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+    border: none;
+    width: 100%;
+    padding-left: 1em;
+    line-height: 18px;
+    font-size: 15px;
+    font-family: "Rubik";
+  }
+  .form-wrapper button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 4.09em;
     border: none;
     background-color: black;
     color: white;
