--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -30,7 +30,7 @@
     min-width: 100%;
     width: 100%;
     input {
-      height: 3.5em;
+      // height: 3.5em;
       outline: none;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
