--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -47,7 +47,7 @@
       align-items: center;
       // box-sizing: border-box;
       justify-content: center;
-      min-height: 4.09em;
+      // min-height: 4.09em;
       // height: 4.09em;
       border: none;
       background-color: black;
@@ -79,7 +79,7 @@
       align-items: center;
       // box-sizing: border-box;
       justify-content: center;
-      min-height: 4.09em;
+      // min-height: 4.09em;
       // height: 4.09em;
       border: none;
       background-color: black;
