--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -37,6 +37,8 @@
     outline: none;
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
+    border-top-right-radius: none;
+    border-bottom-right-radius: none;
     border: none;
     width: 100%;
     padding-left: 1em;
