--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -6,7 +6,7 @@
     max-width: 80%;
     width: 80%;
     height: 3em;
-    border-radius: 8px;
+    // border-radius: 8px;
   }
 
   @include desktop {
@@ -15,7 +15,7 @@
     max-width: 25em;
     width: 100%;
     height: 3em;
-    border-radius: 8px;
+    // border-radius: 8px;
   }
 }
 
