--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -36,6 +36,8 @@
       outline: none;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
       border: none;
       width: 100%;
       padding-left: 1em;
