--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -32,7 +32,7 @@
     min-width: 100%;
     width: 100%;
     input {
-      // height: 3.5em;
+      height: 3.5em;
       outline: none;
       border-top-left-radius: 8px;
       border-bottom-left-radius: 8px;
@@ -52,7 +52,7 @@
       // box-sizing: border-box;
       justify-content: center;
       // min-height: 4.09em;
-      // height: 4.09em;
+      height: 4.09em;
       border: none;
       background-color: black;
       color: white;
