--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -1,12 +1,19 @@
 @import "../Variables/Variables.scss";
 @import "../Breakpoints/Breakpoints.scss";
 .form-container {
-  @include mobile {
+  @include xs {
     display: flex;
     max-width: 80%;
     width: 80%;
     height: 3em;
     // border-radius: 8px;
+  }
+
+  @include mobile {
+    display: flex;
+    max-width: 80%;
+    width: 80%;
+    height: 3em;
   }
 
   @include desktop {
@@ -27,7 +34,7 @@
 }
 
 .form-wrapper {
-  @include mobile {
+  @include xs {
     display: flex;
     min-width: 100%;
     width: 100%;
