--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -41,6 +41,7 @@
     width: 100%;
   }
   .form-wrapper input {
+    box-sizing: border-box;
     height: 3.5em;
     outline: none;
     border-top-left-radius: 8px;
@@ -57,6 +58,7 @@
   .form-wrapper button {
     display: flex;
     align-items: center;
+    box-sizing: border-box;
     justify-content: center;
     height: 4.09em;
     border: none;
