--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -39,6 +39,7 @@
     min-width: 100%;
     width: 100%;
     input {
+      box-sizing: border-box;
       height: 3.5em;
       outline: none;
       border-top-left-radius: 8px;
@@ -56,7 +57,7 @@
     button {
       display: flex;
       align-items: center;
-      // box-sizing: border-box;
+      box-sizing: border-box;
       justify-content: center;
       // min-height: 4.09em;
       height: 4.09em;
