--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -5,16 +5,19 @@
 @media (min-width: 250px) {
   .form-container {
     display: flex;
+    min-width: 80%;
     max-width: 80%;
-    width: 80%;
+    width: 100%;
+    width: auto;
     height: 3em;
   }
 }
 @media (min-width: 375px) {
   .form-container {
     display: flex;
-    max-width: 50%;
-    width: 80%;
+    min-width: 50%;
+    max-width: 60%;
+    width: 60%;
     height: 3em;
   }
 }
@@ -22,6 +25,7 @@
   .form-container {
     display: flex;
     align-items: center;
+    min-width: 12em;
     max-width: 25em;
     width: 100%;
     height: 3em;
