added layout for breadcrumb component to follow

--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -75,3 +75,15 @@
     }
   }
 }
+
+.input-and-feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-container {
+  border: 1px magenta solid;
+  margin-top: 6.5em;
+}
