--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -74,4 +74,16 @@
     cursor: pointer;
     width: 4em;
   }
+}
+
+.input-and-feedback {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.feedback-container {
+  border: 1px magenta solid;
+  margin-top: 6.5em;
 }/*# sourceMappingURL=InputStyles.css.map */
