--- a/src/Styles/DashboardStyles.css
+++ b/src/Styles/DashboardStyles.css
@@ -2,9 +2,79 @@
   font-family: "Rubik";
   src: url("../assets/fonts/Rubik-VariableFont_wght.ttf");
 }
-.dashboard-container {
-  display: flex;
-  align-items: center;
-  height: 6em;
-  background-color: gray;
+@media (min-width: 250px) {
+  .dashboard-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 8px;
+  }
+}
+@media (min-width: 375px) {
+  .dashboard-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 8px;
+  }
+}
+@media (min-width: 960px) {
+  .dashboard-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    border-radius: 8px;
+  }
+}
+
+@media (min-width: 250px) {
+  .dashboard-item {
+    padding: 0.5em;
+    width: 15em;
+    height: 15em;
+  }
+}
+@media (min-width: 375px) {
+  .dashboard-item {
+    padding: 0.5em;
+    width: 15em;
+    height: 15em;
+  }
+}
+@media (min-width: 960px) {
+  .dashboard-item {
+    padding: 1.5em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 15em;
+    height: auto;
+  }
+  .dashboard-item span {
+    font-family: "Rubik";
+    font-family: "Rubik";
+    font-weight: 700;
+    font-size: 8px;
+    letter-spacing: 0.2em;
+    color: hsl(0, 0%, 59%);
+  }
+  .dashboard-item h2 {
+    font-family: "Rubik";
+    font-weight: 500;
+    border: 1px solid orange;
+    width: 100%;
+  }
+}
+
+hr {
+  width: 1px;
+  background-color: darkgray;
+  border: none;
+  height: 5em;
 }/*# sourceMappingURL=DashboardStyles.css.map */
