--- a/src/Styles/DashboardStyles.scss
+++ b/src/Styles/DashboardStyles.scss
@@ -2,8 +2,76 @@
 @import "../Breakpoints/Breakpoints.scss";
 
 .dashboard-container {
-  display: flex;
-  align-items: center;
-  height: 6em;
-  background-color: gray;
+  @include xs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 8px;
+  }
+
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: white;
+    border-radius: 8px;
+  }
+
+  @include desktop {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: white;
+    border-radius: 8px;
+  }
+}
+
+.dashboard-item {
+  @include xs {
+    padding: 0.5em;
+    width: 15em;
+    height: 15em;
+    // border: 1px red solid;
+  }
+  @include mobile {
+    padding: 0.5em;
+    width: 15em;
+    height: 15em;
+
+    // border: 1px red solid;
+  }
+  @include desktop {
+    padding: 1.5em;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 15em;
+    height: auto;
+    // border: 1px red solid;
+
+    span {
+      font-family: $mediumFont;
+      @include mediumFont700;
+      font-size: 8px;
+      letter-spacing: 0.2em;
+      color: $darkGray;
+    }
+
+    h2 {
+      @include mediumFont500;
+      border: 1px solid orange;
+      width: 100%;
+    }
+  }
+}
+
+hr {
+  width: 1px;
+  background-color: darkgray;
+  border: none;
+  height: 5em;
 }
