--- a/src/Styles/DashboardStyles.css
+++ b/src/Styles/DashboardStyles.css
@@ -16,8 +16,10 @@
   .dashboard-container {
     display: flex;
     flex-direction: column;
+    width: auto;
+    height: auto;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     background-color: white;
     border-radius: 8px;
   }
@@ -29,31 +31,39 @@
     align-items: center;
     background-color: white;
     border-radius: 8px;
+    width: 100%;
+    height: 100%;
   }
 }
 
 @media (min-width: 250px) {
   .dashboard-item {
-    padding: 0.5em;
-    width: 15em;
-    height: 15em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: auto;
+    height: auto;
   }
 }
 @media (min-width: 375px) {
   .dashboard-item {
-    padding: 0.5em;
-    width: 15em;
-    height: 15em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: auto;
+    height: auto;
   }
 }
 @media (min-width: 960px) {
   .dashboard-item {
-    padding: 1.5em;
     display: flex;
+    padding: 1.5em;
     justify-content: flex-start;
     align-items: flex-start;
-    flex-direction: column;
     width: 15em;
+    max-height: 4em;
     height: auto;
   }
   .dashboard-item span {
@@ -67,14 +77,15 @@
   .dashboard-item h2 {
     font-family: "Rubik";
     font-weight: 500;
-    border: 1px solid orange;
-    width: 100%;
+    width: auto;
+    margin-top: 0.5em;
   }
 }
 
-hr {
+.horizontal {
   width: 1px;
   background-color: darkgray;
   border: none;
   height: 5em;
+  padding: 0px;
 }/*# sourceMappingURL=DashboardStyles.css.map */
