--- a/src/Styles/DashboardStyles.scss
+++ b/src/Styles/DashboardStyles.scss
@@ -14,8 +14,10 @@
   @include mobile {
     display: flex;
     flex-direction: column;
+    width: auto;
+    height: auto;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     background-color: white;
     border-radius: 8px;
   }
@@ -26,31 +28,42 @@
     align-items: center;
     background-color: white;
     border-radius: 8px;
+    width: 100%;
+    height: 100%;
   }
 }
 
 .dashboard-item {
   @include xs {
-    padding: 0.5em;
-    width: 15em;
-    height: 15em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    // min-width: 25em;
+    width: auto;
+    height: auto;
+    // flex-direction: column;
     // border: 1px red solid;
   }
   @include mobile {
-    padding: 0.5em;
-    width: 15em;
-    height: 15em;
-
     // border: 1px red solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    // min-width: 25em;
+    width: auto;
+    height: auto;
   }
   @include desktop {
-    padding: 1.5em;
     display: flex;
+    padding: 1.5em;
     justify-content: flex-start;
     align-items: flex-start;
-    flex-direction: column;
     width: 15em;
+    max-height: 4em;
     height: auto;
+
     // border: 1px red solid;
 
     span {
@@ -63,15 +76,17 @@
 
     h2 {
       @include mediumFont500;
-      border: 1px solid orange;
-      width: 100%;
+      // border: 1px solid orange;
+      width: auto;
+      margin-top: 0.5em;
     }
   }
 }
 
-hr {
+.horizontal {
   width: 1px;
   background-color: darkgray;
   border: none;
   height: 5em;
+  padding: 0px;
 }
