--- a/src/Styles/DashboardStyles.scss
+++ b/src/Styles/DashboardStyles.scss
@@ -84,9 +84,17 @@
 }
 
 .horizontal {
-  width: 1px;
-  background-color: darkgray;
-  border: none;
-  height: 5em;
-  padding: 0px;
+  @include mobile {
+    width: 0px;
+    background-color: darkgray;
+    border: none;
+    height: 0em;
+  }
+
+  @include desktop {
+    width: 1px;
+    background-color: darkgray;
+    border: none;
+    height: 5em;
+  }
 }
