--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -78,11 +78,12 @@
 
 @media (min-width: 250px) {
   .feedback-container {
-    width: 60%;
-    height: 23em;
+    width: auto;
+    height: auto;
     border: 1px magenta solid;
     border-radius: 8px;
     margin-top: 2em;
+    min-width: 19em;
   }
 }
 @media (min-width: 375px) {
