--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -78,11 +78,12 @@
 
 .feedback-container {
   @include xs {
-    width: 60%;
-    height: 23em;
+    width: auto;
+    height: auto;
     border: 1px magenta solid;
     border-radius: 8px;
     margin-top: 2em;
+    min-width: 19em;
   }
 
   @include mobile {
