--- a/src/Styles/InputStyles.css
+++ b/src/Styles/InputStyles.css
@@ -80,29 +80,29 @@
   .feedback-container {
     width: auto;
     height: auto;
-    border: 1px magenta solid;
     border-radius: 8px;
     margin-top: 2em;
     min-width: 19em;
+    box-shadow: 0px 0px 3px darkgray;
   }
 }
 @media (min-width: 375px) {
   .feedback-container {
     display: flex;
     flex-direction: column;
-    border: 1px magenta solid;
     border-radius: 8px;
     min-width: 60%;
     height: auto;
     width: auto;
+    box-shadow: 0px 0px 3px darkgray;
   }
 }
 @media (min-width: 960px) {
   .feedback-container {
     max-width: 80%;
     height: 18em;
-    border: 1px yellow solid;
     border-radius: 8px;
     margin-top: 4em;
+    box-shadow: 0px 0px 3px darkgray;
   }
 }/*# sourceMappingURL=InputStyles.css.map */
