--- a/src/Styles/InputStyles.scss
+++ b/src/Styles/InputStyles.scss
@@ -80,28 +80,31 @@
   @include xs {
     width: auto;
     height: auto;
-    border: 1px magenta solid;
+
     border-radius: 8px;
     margin-top: 2em;
     min-width: 19em;
+    box-shadow: 0px 0px 3px darkgray;
   }
 
   @include mobile {
     display: flex;
     flex-direction: column;
-    border: 1px magenta solid;
+
     border-radius: 8px;
     // max-width: 70%;
     min-width: 60%;
     height: auto;
     width: auto;
+    box-shadow: 0px 0px 3px darkgray;
   }
 
   @include desktop {
     max-width: 80%;
     height: 18em;
-    border: 1px yellow solid;
+
     border-radius: 8px;
     margin-top: 4em;
+    box-shadow: 0px 0px 3px darkgray;
   }
 }
