--- a/src/Styles/DashboardStyles.scss
+++ b/src/Styles/DashboardStyles.scss
@@ -27,6 +27,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+
     background-color: white;
     border-radius: 8px;
     width: 100%;
@@ -92,10 +93,11 @@
   }
   @include desktop {
     display: flex;
-    padding: 1.5em;
+    // padding: 1.5em;
     justify-content: flex-start;
     align-items: flex-start;
-    min-width: 9em;
+    min-width: 1em;
+    padding-left: 3.5em;
     width: 20em;
     max-height: 4em;
     height: auto;
