--- a/src/Styles/ContainerStyles.scss
+++ b/src/Styles/ContainerStyles.scss
@@ -7,6 +7,10 @@
     flex-direction: column;
     height: 100vh;
     width: 100%;
+    .map-container {
+      height: 100%;
+      width: 100%;
+    }
   }
 
   @include desktop {
@@ -15,12 +19,12 @@
     flex-direction: column;
     height: 100vh;
     width: 100%;
-  }
-}
 
-.map-container {
-  height: 66%;
-  // border: 1px red solid;
+    .map-container {
+      height: 100%;
+      width: 100%;
+    }
+  }
 }
 
 .input-and-feedback {
@@ -33,4 +37,10 @@
 // .feedback-container {
 //   border: 1px magenta solid;
 //   margin-top: 6.5em;
+// }
+
+// .map-container {
+//   border: 1px orange solid;
+//   height: 100%;
+//   width: 100%;
 // }
