--- a/src/Styles/ContainerStyles.css
+++ b/src/Styles/ContainerStyles.css
@@ -11,21 +11,21 @@
     width: 100%;
   }
   .container-styles .map-container {
-    height: 100%;
-    width: 100%;
+    height: auto;
+    width: auto;
   }
 }
 @media (min-width: 960px) {
   .container-styles {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
-    height: 100vh;
+    align-items: center;
+    max-width: 75%;
+    max-height: 25%;
     width: 100%;
-  }
-  .container-styles .map-container {
-    height: 100%;
-    width: 100%;
+    height: 65em;
   }
 }
 
