--- a/src/Styles/ContainerStyles.scss
+++ b/src/Styles/ContainerStyles.scss
@@ -8,22 +8,21 @@
     height: 100vh;
     width: 100%;
     .map-container {
-      height: 100%;
-      width: 100%;
+      height: auto;
+      width: auto;
     }
   }
 
   @include desktop {
     display: flex;
     justify-content: flex-start;
+    align-items: center;
     flex-direction: column;
-    height: 100vh;
+    align-items: center;
+    max-width: 75%;
+    max-height: 25%;
     width: 100%;
-
-    .map-container {
-      height: 100%;
-      width: 100%;
-    }
+    height: 65em;
   }
 }
 
@@ -33,14 +32,3 @@
   justify-content: center;
   align-items: center;
 }
-
-// .feedback-container {
-//   border: 1px magenta solid;
-//   margin-top: 6.5em;
-// }
-
-// .map-container {
-//   border: 1px orange solid;
-//   height: 100%;
-//   width: 100%;
-// }
