--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -108,10 +108,10 @@ a {
 
 body {
   margin: 0%;
-}
-div {
   display: flex;
+  align-items: center;
   justify-content: center;
   width: 100%;
-  /* background-color: black; */
+  height: 100%;
+  background-color: rgb(26, 48, 83);
 }
